--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.1.0
   cloud_firestore: ^5.0.1
+  flutter_map: ^8.2.2
 
 dev_dependencies:
   flutter_test:
