--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.1.0
   cloud_firestore: ^5.0.1
   flutter_map: ^8.2.2
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
